# MirrorCast-

./: .gitignore  BUILD.md  PROJECT_COMPLETION.md  README.md  TODO.md  start-signaling-server.bat
Windows_app/: package-lock.json  package.json
Windows_app/src/: main.js
Windows_app/src/ui/: home.html  index.html  splash.html
Windows_app/src/ui/screens/: qr-display.html  receiver.html
Windows_app/src/ui/scripts/: home.js  qr-display.js  receiver.js
Windows_app/src/ui/styles/: home.css  qr-display-new.css  qr-display.css  receiver.css  theme.css
android/: README.md  build.gradle.kts  gradlew.bat  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android_app/: pubspec.yaml
android_app/android/: gradle.properties
android_app/android/app/: build.gradle.kts
android_app/assets/animations/: mirrorcast_logo.json
android_app/lib/: main.dart
android_app/lib/config/: app_config.dart  theme.dart
android_app/lib/models/: connection_data.dart  connection_state.dart
android_app/lib/services/: connection_manager.dart  qr_service.dart  screen_capture_service.dart  webrtc_service.dart
android_app/lib/ui/screens/: home_screen.dart  (+5 more)
android_app/test/: widget_test.dart
docs/: design_system.md  signaling_server_deployment.md  wireframes.md
server/src/: signaling_server.dart
shared/: protocol.md  qr-payload.json
signaling-server/: README.md  package-lock.json  package.json  server.js
windows/: Cargo.toml  README.md
windows/src/: app.rs  main.rs  qr.rs  renderer.rs  ui.rs  webrtc.rs
(+26 files in other folders)
