[package]
name = "mirrorcast-windows"
version = "0.1.0"
edition = "2021"
authors = ["MirrorCast Team"]
description = "Windows receiver application for MirrorCast screen mirroring"
license = "MIT"

[dependencies]
# GUI Framework
egui = "0.27"
eframe = { version = "0.27", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use glow renering backend
    "persistence",   # Enable restoring app state when restarting the app.
] }

# WebRTC
webrtc = "0.7"
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.21"

# Networking
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# QR Code Generation
qrcode = "0.14"
image = "0.24"

# Logging
log = "0.4"
env_logger = "0.10"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Async utilities
futures = "0.3"
chrono = "0.4"

# System utilities
local-ip-address = "0.6"
uuid = { version = "1.0", features = ["v4"] }

# Video processing
ffmpeg-next = "6.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[[bin]]
name = "mirrorcast"
path = "src/main.rs"
